item spec updated

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -99,6 +99,6 @@
           <% end %>
         </ul>
       <% end %>
-      <%= render :partial => "share/comments", :locals => {:commentable => @item, :comments => @comments} %>
+      <%# render :partial => "share/comments", :locals => {:commentable => @item, :comments => @comments} %>
     </div>
     <div class="clearfix"></div>
