--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,7 +4,7 @@
 
 <% if @user and @user == current_user %>
   <div class="button new">
-    <%= link_to t("resource.new"), new_user_item_path %>
+    <%= link_to t("resource.new"), new_users_item_path %>
   </div>
 <% elsif @group and (@group.members.include?(current_user) or @group.owner == current_user) %>
   <div class="button new">
