--- a/app/views/locations/_nested_form_location.html.erb
+++ b/app/views/locations/_nested_form_location.html.erb
@@ -1,4 +1,6 @@
-<%= render :partial => "share/map", :locals => { :locations => @locations_json } if @locations_json %>
+<center>
+	<%= render :partial => "share/map", :locals => { :locations => @locations_json } if @locations_json %>
+</center>
 <%= f.inputs do %>
   <% f.semantic_fields_for :location do |location_form| %>
     
