devise confirmable integrated

--- a/app/views/share/_error_messages.html.erb
+++ b/app/views/share/_error_messages.html.erb
@@ -3,7 +3,7 @@
   <p><%= t("errors.template.body").html_safe %></p>
     <ul>
   <% target.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
+    <li><%= msg.html_safe %></li>
   <% end %>
   </ul>
 </div>  
