--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
   <%= semantic_form_for @user, :html => {:class => "formular shadowed ui-corner-all"}, :validate => true do |f| %>
     <%= render "share/error_messages", :target => @user %>
     <%= f.inputs do %>
-      <%= f.input :login, :label => t("register.label.login"), :validate => true %>
+      <%= f.input :login, :label => t("register.label.login"), :required => true, :validate => true %>
       <%= f.input :email, :label => t("register.label.email"), :validate => true %>
       <%= f.input :password, :label => t("register.label.password"), :required => true, :validate => true %>
       <%= f.input :password_confirmation, :label => t("register.label.confirmPassword"), :required => true, :validate => true %>
