--- a/app/views/layouts/mailbox.html.erb
+++ b/app/views/layouts/mailbox.html.erb
@@ -6,7 +6,7 @@
         <%# for folder in current_user.folders do %>
           <li class="button"><%= link_to_unless_current t("mailbox.inbox"), mailbox_path(current_user.inbox) %></li>
         <%# end %>
-        <li class="button"><%= link_to_unless_current t("mailbox.sent"), :sent %></li>
+        <li class="button"><%= link_to_unless_current t("mailbox.sent"), sent_index_path %></li>
       </ul>
     </div>
   </div>
