--- a/app/views/devise/mailer/confirmation_instructions.en.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.en.html.erb
@@ -1,4 +1,6 @@
 <p>Welcome <%= @resource.email %>!</p>
 <p>You can confirm your email through the link below:</p>
 <p><%= link_to 'Confirm my email', user_confirmation_url(:confirmation_token => @resource.confirmation_token) %></p>
+<p>If the link is not working, just copy the following link in your browser:</p>
+<p><%= user_confirmation_url(:confirmation_token => @resource.confirmation_token) %></p>
 
