message counter fixed; error msg

--- a/app/views/sent/index.html.erb
+++ b/app/views/sent/index.html.erb
@@ -1,4 +1,4 @@
-<%= "#{t('mailbox.messages')} (#{@messages.size})" %>
+<%= "#{t('mailbox.messages')} (#{current_user.sent_messages.size})" %>
 <table>
   <% for message in @messages %>
     <% if message %>
