--- a/app/views/mailbox/show.html.erb
+++ b/app/views/mailbox/show.html.erb
@@ -1,7 +1,7 @@
-<%= "#{t('mailbox.messages')} (#{@messages.size})" %>
+<%= "#{t('mailbox.messages')} (#{current_user.received_messages.size})" %>
 <table>
 	<% for message in @messages %>
-	  <% if not message.deleted %>
+	  <% if message %>
 	    <tr>
 	      <td><%=h message.author.login %></td>
 	      <td>
