--- a/app/views/mailbox/show.html.erb
+++ b/app/views/mailbox/show.html.erb
@@ -3,7 +3,7 @@
 	<% for message in @messages %>
 	  <% if message %>
 	    <tr>
-	      <td><%=h message.author.login %></td>
+	      <td><%= link_to message.author.login, message_path(message) %></td>
 	      <td>
 	        <% if message.read %>
 	          <%= link_to h(message.subject), message_path(message) %>
