--- a/app/views/share/_login.html.erb
+++ b/app/views/share/_login.html.erb
@@ -11,16 +11,16 @@
   <br/>
   <%= form_for(@user, :as => :user, :url => session_path(:user)) do |f| -%>
     <p>
-      <label for="login"><%= t("login.label.login") %></label>
+      <label for="user_username"><%= t("login.label.login") %></label>
       <%= f.text_field :username %>
     </p>
     <br />
     <p>
-      <label for="password"><%= t("login.label.password") %></label>
+      <label for="user_password"><%= t("login.label.password") %></label>
       <%= f.password_field :password %>
     </p>
     <br />
-    <p><%= f.check_box :remember_me %><%= f.label t("login.label.remember") %></p>
+    <p><%= f.check_box :remember_me %><label for="user_remember_me"><%= t("login.label.remember") %></label></p>
 
     <div class="formbutton"><%= submit_tag t("login.label.submit"), :id => "submit" %></div>
   <% end -%>
