--- a/app/views/share/search/_search.html.erb
+++ b/app/views/share/search/_search.html.erb
@@ -35,7 +35,7 @@
           </tr>
         </table>
       </div>
-    <%= image_submit_tag "icons/icon_magnifier.png", :id => "submit-search", :value => "Go", :class => "ui-corner-all" %>
+    <%= image_submit_tag "icons/icon_magnifier.png", :alt => t("search"), :id => "submit-search", :value => "Go", :class => "ui-corner-all" %>
   <% end %>
   </div>                                     
   <div id="searchmenu">
