--- a/app/views/share/navigation/_topnavigation.html.erb
+++ b/app/views/share/navigation/_topnavigation.html.erb
@@ -6,7 +6,7 @@
     <ul class="profile menu">
       <li><%= link_to t("topnavigation.profile"), current_user %></li>
       <li><%= link_to t("topnavigation.resources"), polymorphic_path([current_user, "items"]) %></li>
-      <li><%= link_to t('topnavigation.mailbox'), mailbox_path(current_user.id) %></li>
+      <li><%= link_to t('topnavigation.mailbox'), mailbox_path(current_user) %></li>
       <li><%= link_to t("topnavigation.logout"), "/logout" %></li>
   <% else %>
     <ul class="menu horizontal">          
