--- a/app/views/sent/_replyform.html.erb
+++ b/app/views/sent/_replyform.html.erb
@@ -20,8 +20,8 @@
         <% end %>
     </li>
 -->
-    <%= f.input :subject, :required => false, :label => t("mailbox.subject") %>
-    <%= f.input :body, :as => :text, :label => t("mailbox.body"), :required => true, :validate => true, :input_html => { :value => "" } %>
+    <%= f.input :subject, :required => false %>
+    <%= f.input :body, :as => :text, :required => true, :validate => true, :input_html => { :value => "" } %>
   <% end %>
   <%= f.actions do %>
     <%= f.action :submit, :label => t("submit"), :button_html => { :class => "submit", :disable_with => "..." } %>
