message mailer templates added

--- a/app/views/messages/reply.js.erb
+++ b/app/views/messages/reply.js.erb
@@ -5,5 +5,5 @@
 <% else %>
 	$('#message_subject').attr('value', '');
 	$('#message_body').attr('value', '');
-	$('#edit_message').slideToggle();
+//	$('#edit_message').slideToggle();
 <% end %>
