--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -112,8 +112,11 @@ body {
     padding:0.5em;
     border:1px solid #cbcec0;
     background: #eaede3;
-    height:250px;
 }
+#mailbox .messagebody pre {
+	white-space: normal;
+}
+
 #new-message {
     padding:0.5em;
     padding-left:1.5em;
