--- a/app/views/message_mailer/hasRepliedMessage.en.html.erb
+++ b/app/views/message_mailer/hasRepliedMessage.en.html.erb
@@ -1,4 +1,4 @@
-<%= @sender.login %> has sent following message to you:<br /><br />
+<%= @sender.login %> has replied:<br /><br />
 <pre>
 <% if not @message.subject.blank? %>
 <b><%= @message.subject %></b><br /><br />
