--- a/app/views/message_mailer/hasRepliedMessage.de.html.erb
+++ b/app/views/message_mailer/hasRepliedMessage.de.html.erb
@@ -1,4 +1,4 @@
-<%= @sender.login %> has sent following message to you:<br /><br />
+<%= @sender.login %> hat dir geantwortet:<br /><br />
 <pre>
 <% if not @message.subject.blank? %>
 <b><%= @message.subject %></b><br /><br />
@@ -6,5 +6,5 @@
 <%= markdown(@message.body) %>
 </pre>
 <br />
-<a href="<%= message_url(@message) %>">See message</a><br />
+<a href="<%= message_url(@message) %>">Zur Nachricht</a><br />
 <%= message_url(@message) %>
