--- a/app/views/share/navigation/_notifications.html.erb
+++ b/app/views/share/navigation/_notifications.html.erb
@@ -13,7 +13,7 @@
 					<% current_user.notifications.each do |n| %>
 						<li class="<%= n.is_read_css %> ui-corner-all">
 							<%= link_to image_tag(microThumb(n.sender), :title => n.sender.login), n.sender if n.sender %>
-							<%= link_to n.title, n.notifiable %>
+							<%= link_to t(n.title, :user => n.sender.login), n.notifiable %>
 							<span class="date"><%=h distance_of_time_in_words(n.created_at, Time.now) %> <%= t("ago") %></span>
 							<%= '<hr class="divider" />'.html_safe unless n == current_user.notifications.last %>
 						</li>
