--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -2,7 +2,7 @@
 <div class="list-item ui-corner-all">
   <%= render :partial => "share/list-item/usermenu", :locals => {:model => group} if logged_in? and group.owner == current_user %>
   <div class="item-members-count font-smaller">
-    <%= image_tag "icons/icon_group.png", :alt => "#{group.title} (#{group.members.size})", :title => "#{group.title} (#{group.members.size})" %> (<%= group.members.size %>)
+    <%= image_tag "icons/icon_group.png", :alt => "#{group.title} - #{t('group.participant', :count => group.members.size)}", :title => "#{group.title} - #{t('group.participant', :count => group.members.size)}" %> (<%= group.members.size %>)
   </div>
   <p class="font-small"><%= link_to shorten_text_cleaned(group.title, 18), group, :title => group.title  if group.title %></p>
   <% if group.images.first %>
