--- a/app/views/share/navigation/_notifications.html.erb
+++ b/app/views/share/navigation/_notifications.html.erb
@@ -2,7 +2,7 @@
 	<div id="notification-icon" class="circle">
 		<%= image_tag("icons/icon_notification.png") %>
 		<% if current_user.notifications.unread.count > 0 %>
-			<div id="notifications-count" class="circle"><%= current_user.notifications.unread.count.to_i %></div>		
+			<div id="notifications-count" class="circle"><%= current_user.notifications.unread.count %></div>		
 		<% end %>
 		<div id="notification-panel">	
 			<div id="notification-arrow">
@@ -15,7 +15,7 @@
 						<li class="<%= n.is_read_css %> ui-corner-all">
 							<%= link_to image_tag(microThumb(n.sender), :title => n.sender.login), n.sender if n.sender %>
 							<%= notification_message(n) %>
-							<span class="date"><%=h distance_of_time_in_words(n.created_at, Time.now) %> <%= t("ago") %></span>
+							<span class="date"><%= distance_of_time_in_words(n.created_at, Time.now) %> <%= t("ago") %></span>
 							<%= '<hr class="divider" />'.html_safe unless n == current_user.notifications.last %>
 						</li>
 					<% end %>
