--- a/app/views/layouts/mailbox.html.erb
+++ b/app/views/layouts/mailbox.html.erb
@@ -4,9 +4,9 @@
     <div class="menu folder">
       <ul class="horizontal">
         <%# for folder in current_user.folders do %>
-          <li class="button"><%= link_to_unless_current t("mailbox.inbox"), mailbox_path(current_user) %></li>
+          <li class="button"><%= link_to_unless_current t("mailbox.inbox"), mailbox_path(current_user), :id => "inbox" %></li>
         <%# end %>
-        <li class="button"><%= link_to_unless_current t("mailbox.sent"), sent_index_path %></li>
+        <li class="button"><%= link_to_unless_current t("mailbox.sent"), sent_index_path, :id => "outbox" %></li>
       </ul>
     </div>
   </div>
