--- a/app/views/sent/_form.html.erb
+++ b/app/views/sent/_form.html.erb
@@ -21,6 +21,6 @@
     <%= f.input :body, :as => :text, :label => t("mailbox.body"), :validate => true  %>
   <% end %>
   <%= f.actions do %>
-    <%= f.action :submit, :label => t("submit"), :button_html => { :class => "submit", :disable_with => "..." } %>
+    <%= f.action :submit, :label => t("submit"), :button_html => { :id => "submit_new_message", :class => "submit", :disable_with => "..." } %>
   <% end %>
 <% end %>
