basic fetching of gmail, yahoo and hotmail contacts

--- a/app/views/invitations/show.html.erb
+++ b/app/views/invitations/show.html.erb
@@ -25,6 +25,12 @@
   <%= @invitation.invitationmessage %>
 </p>
 
+<% if @contacts and @contacts.count > 0 %>
+	<% for contact in @contacts do %>
+		<span>Name:<%= contact[0] %></span>
+		<span>Email:<%= contact[1] %></span>
+	<% end %>
+<% end %>
 
 <%= link_to 'Edit', edit_invitation_path(@invitation) %> |
 <%= link_to 'Back', invitations_path %>
