--- a/app/views/invitations/_form.html.erb
+++ b/app/views/invitations/_form.html.erb
@@ -1,6 +1,7 @@
 <%= semantic_form_for @invitation do |f| %>
   <%= f.inputs do %>
     <%= f.input :sender_id, :as => :hidden, :value => current_user %>
+		<%= f.input :provider, :as => :select, :collection => @invitation.providerlist %>
     <%= f.input :username %>
     <%= f.input :password %>
     <%= f.input :emails %>
