--- a/app/views/invitations/_form.html.erb
+++ b/app/views/invitations/_form.html.erb
@@ -1,41 +1,34 @@
 <%= content_for :head do %>
+  <%= stylesheet_link_tag 'jquery.listBuilder.css' %>
+  <%= javascript_include_tag 'jquery.listBuilder' %>
+
   <script type="text/javascript">
     $(document).ready(function (){
-			var current_emails = $('#invitation_emails').val().split(",");
-			
-			var url = window.location.pathname;
-			url  = url.replace("edit", "contacts");
-			$.getJSON(url, function(data) {
-				var items = current_emails;
-			 
-				$.each(data, function(key, val) {										
-					contact = val.join().split(",");
-					if(contact[1]) {
-						items.push('<' + contact[0] + '>' + contact[1]);
-					} else {
-						items.push(contact[0]);
-					} 					
-					//alert(items.join(''));				
-				});
-			 
-				$('#invitation_emails').val(items.join(', '));
+      /* AUTOCOMPLETE & LISTBUILDER */
+			$( "#invitation_emails" ).listBuilder({
+				onlyAddFromSource: false
+			});
+/*
+			$(".ui-listbuilder-input").addClass("noEnterSubmit");
+			$(".noEnterSubmit").keypress(function(e){
+				if ( e.which == 13 ) return false;
 			});    
+*/
 		});
   </script>
 <% end %>
-<%= form_tag "/users/invitations/contacts", :method => :post, :remote => true do |f| %>
-<p class="font-smaller">
-  	<%= select_tag :provider, options_for_select(Invitation::PROVIDER), {:prompt => "please choose", :class => "ui-corner-all"} %>
-    <%= text_field_tag :username, "christiangrlica@gmail.com", :class => "ui-corner-all" %>
-    <%= text_field_tag :password, "heavenseven", :class => "ui-corner-all" %>
-  
-	  <%= submit_tag 'load contacts', :class => "ui-corner-all" %>
-</p>
+<%= form_tag "#{request.url.gsub('edit','')}/contacts", :method => :post, :remote => true do |f| %>
+	<p class="font-smaller">
+			<%= select_tag :provider, options_for_select(Invitation::PROVIDER), {:prompt => "please choose", :class => "ui-corner-all"} %>
+		  <%= text_field_tag :username, "christiangrlica@gmail.com", :class => "ui-corner-all" %>
+		  <%= text_field_tag :password, "heavenseven", :class => "ui-corner-all" %>
+		
+			<%= submit_tag 'load contacts', :class => "ui-corner-all" %>
+	</p>
 <% end %>
 <%= semantic_form_for [current_user, @invitation] do |f| %>
-	<br />
   <%= f.inputs do %>
-    <%= f.input :emails %>
+    <%= f.input "emails", :as => :string %>
     <%= f.input :invitationmessage %>
   <% end %>
 
