preparing friendship-invitation connection

--- a/app/views/invitations/_form.html.erb
+++ b/app/views/invitations/_form.html.erb
@@ -6,7 +6,7 @@
     $(document).ready(function (){
       /* AUTOCOMPLETE & LISTBUILDER */
 			$( "#invitation_emails" ).listBuilder({
-				onlyAddFromSource: false
+				onlyAddFromSource: true
 			});
 /*
 			$(".ui-listbuilder-input").addClass("noEnterSubmit");
