--- a/app/assets/stylesheets/global/main.css
+++ b/app/assets/stylesheets/global/main.css
@@ -246,21 +246,20 @@ table td {
   width:90%;
 }
 /* messages */
-.notice, .error {
+#flash_notice, #flash_error {
   padding:0.5em;
   margin:0.5em auto 0.5em 4%;
   text-align:left;
   width:90%;
+  background:#D3DFCF;
 }
 .notice {
   border:2px solid #3c752d;
   color:#46aa2b;
-  background:#D3DFCF;
 }
 .error {
   border:2px solid #AA111A;
   color: #AA111A;
-  background:#D3DFCF;
 }
 .exit {
   position:relative;
