--- a/app/views/sent/create.js.erb
+++ b/app/views/sent/create.js.erb
@@ -1,3 +1,7 @@
+var notice_length =	$('#flash_notice').length;
+if(notice_length > 0) {
+	$('#flash_notice').remove();
+}
 $("#header").after('<div id="flash_notice" class="notice ui-corner-all"><%= escape_javascript(I18n.t("flash.message.send"))%></div>');
 $('#message_subject').attr('value', '');
 $('#message_body').attr('value', '');
