mailer sends invitation to recipient

--- a/app/views/user_mailer/sendInvitation.de.html.erb
+++ b/app/views/user_mailer/sendInvitation.de.html.erb
@@ -1,5 +1,7 @@
 Hallo <%= @name %>,
-
-<%= @user.login %> hat dich eingeladen, bei iwyg.net mitzumachen.
-
+<br />
+<%= @user.login %> hat dich eingeladen, bei iwyg.net mitzumachen:<br />
+<br />
+<%= @message %>
+<br />
 <%= @signup_url %>
