--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -115,5 +115,25 @@
 <% end %>                   
 <!-- devise_rpx -->
 <%# javascript_include_rpx(user_session_url) %>
+
+<!-- goSquared -->
+<script type="text/javascript">
+  var GoSquared = {};
+  GoSquared.acct = "GSN-127620-P";
+  (function(w){
+    function gs(){
+      w._gstc_lt = +new Date;
+      var d = document, g = d.createElement("script");
+      g.type = "text/javascript";
+      g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
+      var s = d.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(g, s);
+    }
+    w.addEventListener ?
+      w.addEventListener("load", gs, false) :
+      w.attachEvent("onload", gs);
+  })(window);
+</script>
+<%= piwik_tracking_tag %>
 </body>
 </html>
