make items likeable

--- a/app/views/items/_itemmenu.html.erb
+++ b/app/views/items/_itemmenu.html.erb
@@ -8,7 +8,12 @@
     </li>
   <% else %>
 		<% if not current_user.following?(item) %>
-    <li class="button"><%= link_to t("follow"), follow_item_path, :method => :put %></li>
+    	<li class="button"><%= link_to t("follow"), follow_item_path, :method => :put %></li>
+	  <% end %>
+		<% if not current_user.likes?(item) %>
+    	<li class="button"><%= link_to t("like"), like_item_path, :method => :put %></li>
+	  <% else %>
+	  	<li class="button"><%= link_to t("unlike"), unlike_item_path, :method => :put %></li>
 	  <% end %>
   <% end %>
   </ul>
