--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -54,7 +54,7 @@
       <% end %>
     </div>
   <% end %>
-	<%= @item.likers(User) %>
+	<%= render :partial => "share/social", :locals => { :thing => @item } %>
   <div class="box ui-corner-all tags">
     <%= render :partial => "share/tags", :locals => { :tags => @item.tags, :model => :items } %>
     <% if @item.description %>
