--- a/app/views/share/_social.html.erb
+++ b/app/views/share/_social.html.erb
@@ -1,2 +1,22 @@
-<%= thing.likers(User).size %>
- 
+<%# thing.likers(User).size %>
+<%= content_for :head do %>
+  <%# stylesheet_link_tag "socialcount.css" %>
+  <%= stylesheet_link_tag "socialcount-with-icons.css" %>
+	<%= javascript_include_tag "socialcount" %>
+	<!-- facebook -->
+	<meta property="og:site_name" content="iwyg"/>
+	<meta property="og:image" content="<%= asset_path('iwyg_logo_new_250x250.png') %>" />
+	<meta property="og:title" content="iwyg: thing.title"/>
+	<meta property="og:url" content="<%= request.url %>"/>
+	<meta property="og:description" content="here comes the description" />
+	<!-- google -->
+	<link rel="canonical" href="<%= request.url %>" />
+<% end %>
+
+<div class="box">
+	<ul class="horizontal socialcount socialcount-small" data-url="<%= request.url %>" data-counts="true" data-share-text="iwyg - don't worry, be happy!">
+		<li class="facebook"><a href="https://www.facebook.com/sharer/sharer.php?u=<%= request.url %>&t=iwyg: thing.title" title="Share on Facebook"><span class="social-icon icon-facebook"></span><span class="count">Like</span></a></li>
+		<li class="twitter"><a href="https://twitter.com/intent/tweet?text=<%= request.url %>" title="Share on Twitter"><span class="social-icon icon-twitter"></span><span class="count">Tweet</span></a></li>
+		<li class="googleplus"><a href="https://plus.google.com/share?url=<%= request.url %>" title="Share on Google Plus"><span class="social-icon icon-googleplus"></span><span class="count">+1</span></a></li>
+	</ul> 
+</div>
