--- a/app/views/share/_social.html.erb
+++ b/app/views/share/_social.html.erb
@@ -19,8 +19,8 @@
 
 <div class="box">
 	<ul class="horizontal socialcount socialcount-small" data-url="<%= request.url %>" data-counts="true" data-share-text="iwyg - don't worry, be happy!">
-		<li class="facebook"><a href="https://www.facebook.com/sharer/sharer.php?u=<%= request.url %>&t=iwyg: thing.title" title="Share on Facebook"><span class="social-icon icon-facebook"></span><span class="count">Like</span></a></li>
-		<li class="twitter"><a href="https://twitter.com/intent/tweet?text=<%= request.url %>" title="Share on Twitter"><span class="social-icon icon-twitter"></span><span class="count">Tweet</span></a></li>
-		<li class="googleplus"><a href="https://plus.google.com/share?url=<%= request.url %>" title="Share on Google Plus"><span class="social-icon icon-googleplus"></span><span class="count">+1</span></a></li>
+		<li class="facebook button"><a href="https://www.facebook.com/sharer/sharer.php?u=<%= request.url %>" title="Share on Facebook"><span class="social-icon icon-facebook"></span><span class="count"></span></a></li>
+		<li class="twitter button"><a href="https://twitter.com/intent/tweet?text=<%= request.url %>" title="Share on Twitter"><span class="social-icon icon-twitter"></span><span class="count"></span></a></li>
+		<li class="googleplus button"><a href="https://plus.google.com/share?url=<%= request.url %>" title="Share on Google Plus"><span class="social-icon icon-googleplus"></span><span class="count"></span></a></li>
 	</ul> 
 </div>
