--- a/app/assets/stylesheets/global/links.css
+++ b/app/assets/stylesheets/global/links.css
@@ -27,6 +27,7 @@ li.button {
 .button {
   padding:0.2em;
 	margin:0.4em;
+	margin-left: 0px;
   border:1px solid #A4B895; 
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
