--- a/app/assets/stylesheets/global/items.css
+++ b/app/assets/stylesheets/global/items.css
@@ -1,10 +1,3 @@
-/**
- * Events page style definition.
- * 
- * @author Christian Grlica
- * @copyright 2011 by Heavenseven, www.heavenseven.net 
-*/
-
 /* LOCATION */
 
 .location {
@@ -13,6 +6,7 @@
 
 /* QR */
 #qrcode {
+		display: none;
     width: 128px;
     float:right;
     position: relative;
