--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <%= stylesheet_link_tag "style", "token-input", "formtastic", "formtastic_changes", "jquery.autocomplete" %>
+  <%= stylesheet_link_tag "style", "mobile", "token-input", "formtastic", "formtastic_changes", "jquery.autocomplete" %>
   <!--[if IE 6]><%= stylesheet_link_tag 'formtastic_ie6' %><![endif]-->
   <!--[if IE 7]><%= stylesheet_link_tag 'formtastic_ie7' %><![endif]-->
   <%# stylesheet_link_tag "colorbox.css" %>
@@ -13,7 +13,7 @@
 	<link href="http://fonts.googleapis.com/css?family=Signika+Negative:600,400" rel="stylesheet" type="text/css">
   <%= stylesheet_link_tag "themes/iwyg/jquery-ui-1.8.11.custom.css" %>
   <%= stylesheet_link_tag "themes/iwyg/agents/#{users_browser}" if File.exist?("app/assets/stylesheets/themes/iwyg/agents/#{users_browser}.css") %>
-
+	
   <%= javascript_include_tag "application" %>
   <%= javascript_include_tag "jquery-ui.js" %>
   <%= javascript_include_tag "i18n/jquery-ui-i18n.js" %>
