--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -1,47 +1,96 @@
 /* Smaller than standard 960 (devices and browsers) */
-@media only screen and (max-width : 1024px) {
+@media only screen 
+and (min-width : 768px) 
+and (max-width : 1024px) {
 	#content {
 		width: 92.5%;
 	} 
 }
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
-/* Styles */
+and (min-width : 320px) 
+and (max-width : 480px) {
+	#content {
+		background: yellow !important;
+	}
 }
 
 /* Smartphones (landscape) ----------- */
 @media only screen 
 and (min-width : 321px) {
-/* Styles */
 }
 
 /* Smartphones (portrait) ----------- */
 @media only screen 
 and (max-width : 320px) {
-/* Styles */
 }
 
 /* iPads (portrait and landscape) ----------- */
 @media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) {
-/* Styles */
+and (min-width : 768px) 
+and (max-width : 1024px) {
+	.sub2cols #userarea {
+		width: 74%;
+	}
 }
+@media only screen 
+and (min-width : 480px) 
+and (max-width : 768px) {
 
+	body {
+		font-size:80%;
+	}
+	.list-item {
+		width: 110px;
+	}
+	.sub2cols #userarea {
+		width: 63%;
+	}
+	h2 {
+		margin-bottom: 0.3em;
+	}
+	.new {
+	max-width: 180px;
+	}
+	#topnavigation {
+		top: 1em;
+		right: 2em;
+		padding: 0.3em;
+	}
+	#search {
+		left: 25%;
+		padding-top: 4em;
+	}
+	#search #submit-search {
+		position: absolute;
+		top: 9px;
+		left: 102%;
+		width: 18px;
+	}
+	#logo {
+		left: 50%; 
+	}
+	#logo a img {
+		width: 38px;
+	}
+}
 /* iPads (landscape) ----------- */
 @media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
+and (min-width : 768px) 
+and (max-width : 1024px) 
 and (orientation : landscape) {
-/* Styles */
+/*
+	#content {
+		background: blue !important;
+	}
+*/
+
 }
 
 /* iPads (portrait) ----------- */
 @media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
+and (min-width : 768px) 
+and (max-width : 1024px) 
 and (orientation : portrait) {
 /* Styles */
 }
@@ -60,7 +109,7 @@ and (min-width : 1824px) {
 
 /* iPhone 4 ----------- */
 @media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
+only screen and (-webkit-min-pixel-ratio : 1.5),
+only screen and (min-pixel-ratio : 1.5) {
 /* Styles */
 }	
