--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -22,14 +22,10 @@ and (min-width : 321px) {
 and (max-width : 320px) {
 }
 
-/* iPads (portrait and landscape) ----------- */
 @media only screen 
-and (min-width : 768px) 
-and (max-width : 1024px) {
-	.sub2cols #userarea {
-		width: 74%;
-	}
+and (max-width : 480px) {
 }
+
 @media only screen 
 and (min-width : 480px) 
 and (max-width : 768px) {
@@ -71,7 +67,20 @@ and (max-width : 768px) {
 	#logo a img {
 		width: 38px;
 	}
+	.list-item .image-big {
+		width: 100px;
+	}
+
 }
+/* iPads (portrait and landscape) ----------- */
+@media only screen 
+and (min-width : 768px) 
+and (max-width : 1024px) {
+	.sub2cols #userarea {
+		width: 74%;
+	}
+}
+
 /* iPads (landscape) ----------- */
 @media only screen 
 and (min-width : 768px) 
