language html tag; language menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <% rendering_start = Time.now %>
 <!DOCTYPE html>
-<html>
+<html lang="<%= I18n.locale.to_s %>">
 <head>
   <%= stylesheet_link_tag "application", :media => "screen" %>
+  <%= stylesheet_link_tag "http://twitter.github.com/bootstrap/assets/css/bootstrap.css", :media => "screen" %>
   <!--[if IE 6]><%= stylesheet_link_tag 'formtastic_ie6' %><![endif]-->
   <!--[if IE 7]><%= stylesheet_link_tag 'formtastic_ie7' %><![endif]-->
 	<!--[if lt IE 9]><script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script><![endif]-->
@@ -81,6 +82,8 @@
     </div>
   <% end %>
   <%= render :partial => 'share/navigation/mainnavigation' %>
+  <%= render :partial => 'share/languages' %>
+	<%= render :partial => 'share/navigation/notifications' if logged_in? %>
   <div id="content">   
 		<%=  yield %>
   </div>
@@ -96,7 +99,6 @@
     <%= "Rendered in #{rendering_time} seconds" %>
     -->
     <div id="footernavigation">
-       <%= render :partial => 'share/languages' %>
        <!-- gmaps4rails -->
        <%= yield :scripts %>
     </div>
