--- a/app/assets/stylesheets/global/menues.css
+++ b/app/assets/stylesheets/global/menues.css
@@ -16,6 +16,15 @@
   display:block;
 }
 
+#languages {
+	position: absolute;
+	right: 4.5em;
+	margin-top: 1em;
+	width: 30px;
+}
+#languages ul li {
+	padding:0.2em;
+}
 .tabNavigation {
   padding:0.5em !important; 
 }
