--- a/app/views/share/_languages.html.erb
+++ b/app/views/share/_languages.html.erb
@@ -1,13 +1,15 @@
-<ul id="languages">
- <% I18n.available_locales.each do |locale| %>
-   <% unless locale == :locale %>
-    <li><%= link_to image_tag(
-      "flags/#{locale}.png", 
-      :alt => I18n.t("meta.language_name", :locale => locale.to_sym),
-      :title => I18n.t("meta.language_name", :locale => locale.to_sym)
-      ),
-			"/#{locale}#{request.fullpath}"
-    %></li>
-   <% end %>
- <% end %>
-</ul>
+<div id="languages">
+	<ul class="horizontal">
+	 <% I18n.available_locales.each do |locale| %>
+		 <% unless locale == I18n.locale %>
+		  <li><%= link_to image_tag(
+		    "flags/#{locale}.png", 
+		    :alt => I18n.t("meta.language_name", :locale => locale.to_sym),
+		    :title => I18n.t("meta.language_name", :locale => locale.to_sym)
+		    ),
+				"/#{locale}#{request.fullpath}"
+		  %></li>
+		 <% end %>
+	 <% end %>
+	</ul>
+</div>
