--- a/app/assets/stylesheets/global/forms.css
+++ b/app/assets/stylesheets/global/forms.css
@@ -42,7 +42,7 @@ fieldset {
 }
 
 .loginform {
-  width: 500px;  
+  width: 80%;  
   margin-left:auto !important;
   margin-right:auto !important;
   margin-top: 4em;
