--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -23,12 +23,29 @@ and (max-width : 320px) {
 }
 
 @media only screen 
-and (max-width : 480px) {
+and (max-width : 480px)
+and (max-width : 640px) {
 }
 
 @media only screen 
-and (min-width : 480px) 
-and (max-width : 768px) {
+and (max-width : 780px) {
+	
+	.ui-listbuilder-items {
+		overflow: shown !important;
+		width: auto;
+	}	
+
+	.ui-tabs {
+		padding: 0em;
+	}
+	
+	.ui-tabs .ui-tabs-nav li a,
+	.ui-tabs .ui-tabs-nav li,
+	.sub2cols .subcol2,
+	.sub2cols .subcol1,
+	#col1, #col2 {
+		width: 100%;
+	}
 
 	body {
 		font-size:80%;
@@ -37,7 +54,7 @@ and (max-width : 768px) {
 		width: 110px;
 	}
 	.sub2cols #userarea {
-		width: 63%;
+		width: 68%;	
 	}
 	h2 {
 		font-size: 125%;
@@ -52,20 +69,36 @@ and (max-width : 768px) {
 		padding: 0.3em;
 	}
 	#search {
+		margin-top: 3.1em;
+		position: relative;
 		left: 25%;
-		padding-top: 4em;
+		font-size: 90%;
 	}
 	#search #submit-search {
 		position: absolute;
 		top: 9px;
 		left: 102%;
-		width: 18px;
+		width: 17px;
 	}
+	#search #searchmenu {
+		font-size: 75%;
+		left: -5em;
+		position: relative;
+		top: 4.3em;
+	}
+	#search #searchmenu a {
+		text-decoration:none;
+	}		
+	#search #searchmenu a:hover {
+		text-decoration:none;
+		font-style: italic;
+	}	
 	#logo {
 		left: 50%; 
+		top: 7px;
 	}
 	#logo a img {
-		width: 38px;
+		width: 45px;
 	}
 	.list-item .image-big {
 		width: 100px;
