--- a/app/assets/stylesheets/mobile.css
+++ b/app/assets/stylesheets/mobile.css
@@ -1,30 +1,22 @@
-/* Smaller than standard 960 (devices and browsers) */
+@media only screen 
+and (min-width : 1824px) {
+/* Styles */
+}
+
+@media only screen 
+and (min-width : 1224px) {
+/* Styles */
+}
+
 @media only screen 
 and (min-width : 768px) 
 and (max-width : 1024px) {
 	#content {
 		width: 92.5%;
 	} 
-}
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-width : 320px) 
-and (max-width : 480px) {
-}
-
-/* Smartphones (landscape) ----------- */
-@media only screen 
-and (min-width : 321px) {
-}
-
-/* Smartphones (portrait) ----------- */
-@media only screen 
-and (max-width : 320px) {
-}
-
-@media only screen 
-and (max-width : 480px)
-and (max-width : 640px) {
+	.sub2cols #userarea {
+		width: 74%;
+	}
 }
 
 @media only screen 
@@ -39,6 +31,10 @@ and (max-width : 780px) {
 		padding: 0em;
 	}
 	
+	#content {
+		width: 90%;
+	}
+
 	.ui-tabs .ui-tabs-nav li a,
 	.ui-tabs .ui-tabs-nav li,
 	.sub2cols .subcol2,
@@ -54,7 +50,7 @@ and (max-width : 780px) {
 		width: 110px;
 	}
 	.sub2cols #userarea {
-		width: 68%;	
+		width: 58%;	
 	}
 	h2 {
 		font-size: 125%;
@@ -71,7 +67,7 @@ and (max-width : 780px) {
 	#search {
 		margin-top: 3.1em;
 		position: relative;
-		left: 25%;
+		left: 4%;
 		font-size: 90%;
 	}
 	#search #submit-search {
@@ -94,7 +90,7 @@ and (max-width : 780px) {
 		font-style: italic;
 	}	
 	#logo {
-		left: 50%; 
+		left: 4%; 
 		top: 7px;
 	}
 	#logo a img {
@@ -105,46 +101,41 @@ and (max-width : 780px) {
 	}
 
 }
-/* iPads (portrait and landscape) ----------- */
+
 @media only screen 
-and (min-width : 768px) 
-and (max-width : 1024px) {
-	.sub2cols #userarea {
-		width: 74%;
+and (max-width : 480px)
+and (max-width : 700px) {
+
+	#mainnavigation {
+		margin-bottom: 1em;
+	}
+	
+	#search {
+		margin-top: 3.1em;
+			left: 4%;
+	}
+
+	.sub2cols #userarea,
+	.sub2cols #userdescription {
+		width: 100%;
+	}
+
+	.sub2cols #userdescription {
+		margin-bottom: 2em;
+	}
+
+	#userarea {
+		padding: 0em;	
+	}
+
+	form.formtastic input[type="submit"], .submit {
+		width: auto;
 	}
 }
 
-/* iPads (landscape) ----------- */
 @media only screen 
-and (min-width : 768px) 
-and (max-width : 1024px) 
-and (orientation : landscape) {
-/*
-	#content {
-		background: blue !important;
-	}
-*/
-
-}
-
-/* iPads (portrait) ----------- */
-@media only screen 
-and (min-width : 768px) 
-and (max-width : 1024px) 
-and (orientation : portrait) {
-/* Styles */
-}
-
-/* Desktops and laptops ----------- */
-@media only screen 
-and (min-width : 1224px) {
-/* Styles */
-}
-
-/* Large screens ----------- */
-@media only screen 
-and (min-width : 1824px) {
-/* Styles */
+and (min-width : 320px) 
+and (max-width : 480px) {
 }
 
 /* iPhone 4 ----------- */
