--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,5 @@
 <div class="user list-item ui-corner-all">
-  <div class="image ui-corner-all"><%= link_to image_tag( tinyThumb(user), :alt => user.login, :title => user.login ), user %></div>
+  <div class="image ui-corner-all"><%= link_to image_tag( tinyThumb(user), :alt => user.login, :title => user.login, :class => "ui-corner-all" ), user %></div>
     <div class="font-small center">
       <%= link_to user.login, user %><br />
     </div>
