jquery-ui image-paths fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html lang="<%= I18n.locale.to_s %>">
 <head>
   <%= stylesheet_link_tag "application", :media => "screen" %>
-  <%= stylesheet_link_tag "http://twitter.github.com/bootstrap/assets/css/bootstrap.css", :media => "screen" %>
+  <%= stylesheet_link_tag "themes/iwyg/jquery-ui-1.8.11.custom", :media => "screen" %>
   <!--[if IE 6]><%= stylesheet_link_tag 'formtastic_ie6' %><![endif]-->
   <!--[if IE 7]><%= stylesheet_link_tag 'formtastic_ie7' %><![endif]-->
 	<!--[if lt IE 9]><script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script><![endif]-->
